-- Drop table if it exists (for development purposes)
-- CASCADE ensures dependent tables are also dropped
DROP TABLE IF EXISTS calendar_events CASCADE;
DROP TABLE IF EXISTS sessions CASCADE;
DROP TABLE IF EXISTS profiles CASCADE;
DROP TABLE IF EXISTS user_teams CASCADE;
DROP TABLE IF EXISTS users CASCADE;
DROP TABLE IF EXISTS teams CASCADE;

-- Create users table
CREATE TABLE users (
    uid SERIAL PRIMARY KEY,
    email VARCHAR(255) UNIQUE NOT NULL,
    firstName VARCHAR(255) NOT NULL,
    lastName VARCHAR(255) NOT NULL,
    password_hash VARCHAR(255) NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    last_login TIMESTAMP,
    is_active BOOLEAN DEFAULT TRUE,
    role VARCHAR(50) DEFAULT 'guest' CHECK (role IN ('guest', 'student', 'lecturer', 'planner', 'censor', 'admin'))
);

-- Create index on email for faster lookups
CREATE INDEX IF NOT EXISTS idx_users_email ON users(email);

-- Create index on is_active for filtering active users
CREATE INDEX IF NOT EXISTS idx_users_active ON users(is_active);

-- Insert a test user
-- Email: test@example.com  
-- Password: password123
INSERT INTO users (email, firstName, lastName, password_hash, role) 
VALUES ('test@example.com', 'test', 'Admin', '$2a$12$SPDmr7PZip/M2r8KVZk/veE4GHkWUkJsho93T1K9n2ox4isAd2e1e', 'admin') -- Hash for pw.
ON CONFLICT (email) DO NOTHING;

-- Display created table
SELECT 'Users table created successfully!' as status;
