---
id: b10b27fc-23f7-47e2-a4fc-f8f138ba29c5
---
erDiagram
    USERS ||--o| PROFILES : "has"
    USERS ||--o{ SESSIONS : "has"
    USERS ||--o{ CALENDAR_EVENTS : "creates"
    USERS ||--o{ EVENT_PARTICIPANTS : "participates"
    USERS }o--o{ TEAMS : "belongs to"
    CALENDAR_EVENTS ||--o{ EVENT_PARTICIPANTS : "includes"
    USER_TEAMS }o--|| USERS : "references"
    USER_TEAMS }o--|| TEAMS : "references"

    USERS {
        int uid PK
        varchar email UK
        varchar firstName
        varchar lastName
        varchar password_hash
        timestamp created_at
        timestamp updated_at
        timestamp last_login
        boolean is_active
        varchar role
    }

    PROFILES {
        int puid PK
        int uid "FK, UK"
        varchar navn
        varchar adresse
        varchar mobil_nr
        timestamp created_at
        timestamp updated_at
    }

    SESSIONS {
        int session_id PK
        int uid FK
        char session_token
        timestamp created_at
        timestamp expires_at
    }

    CALENDAR_EVENTS {
        int event_id PK
        int user_id FK
        varchar title
        varchar description
        timestamp submission_time
        timestamp start_time
        timestamp end_time
        varchar location
        boolean is_all_day
        varchar type
        varchar color
        timestamp created_at
        timestamp updated_at
    }

    EVENT_PARTICIPANTS {
        int participant_id PK
        int event_id FK
        int user_id FK
        varchar status
        timestamp joined_at
    }

    TEAMS {
        int id PK
        varchar name
        text description
        timestamp created_at
        timestamp updated_at
    }

    USER_TEAMS {
        int user_id "PK, FK"
        int team_id "PK, FK"
        timestamp joined_at
    }